# qa_guru_python_6_20

./: pyproject.toml
tests/: conftest.py  tests_api.py
