[tool.poetry]
name = "qaguru-python-6-20"
version = "0.1.0"
description = ""
authors = ["Aleksandra Kashina <Borland3711@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "7.4.2"
requests = "2.31.0"
jsonschema = "4.19.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
